Kubernetes/manifests/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weight-tracker-app
spec:
  selector:
    matchLabels:
      app: weight-tracker
  replicas: 3
  template:
    metadata:
      labels:
        app: weight-tracker
    spec:
      containers:
      - name: weight-tracker
        image: kfir1200.azurecr.io/bootcamp-app:#tag#
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
