Kubernetes/manifests/app/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weight-tracker-service
  labels:
    app: weight-tracker
spec:
  selector:
    app: weight-tracker
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
